--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -32,8 +32,8 @@ jobs:
       fail-fast: false
       matrix:
         name:
-          # - git-remote-gosh-darwin-arm64
-          # - git-remote-gosh-darwin-amd64
+          - git-remote-gosh-darwin-arm64
+          - git-remote-gosh-darwin-amd64
           - git-remote-gosh-linux-arm64
           - git-remote-gosh-linux-amd64
         bin:
@@ -76,12 +76,12 @@ jobs:
             copy_abi: true
 
           ## name
-          # - name: git-remote-gosh-darwin-arm64
-          #   os: macos-12
-          #   target: aarch64-apple-darwin
-          # - name: git-remote-gosh-darwin-amd64
-          #   os: macos-12
-          #   target: x86_64-apple-darwin
+          - name: git-remote-gosh-darwin-arm64
+            os: macos-12
+            target: aarch64-apple-darwin
+          - name: git-remote-gosh-darwin-amd64
+            os: macos-12
+            target: x86_64-apple-darwin
           - name: git-remote-gosh-linux-arm64
             os: ubuntu-20.04  # important due to potential glibc conflicts
             target: aarch64-unknown-linux-gnu
@@ -122,16 +122,16 @@ jobs:
       - name: Install Linux packages
         if: startsWith(matrix.os, 'ubuntu-')
         env:
-          APT: >
+          APT: >-
             clang
             build-essential
             librocksdb-dev
             libssl-dev
-          APT_ARM64: >
+          APT_ARM64: >-
             g++-aarch64-linux-gnu
             libc6-dev-arm64-cross
             gcc-aarch64-linux-gnu
-          APT_AMD64: >
+          APT_AMD64: >-
             g++-x86-64-linux-gnu
             libc6-dev-amd64-cross
             gcc-x86-64-linux-gnu
@@ -182,8 +182,8 @@ jobs:
     strategy:
       matrix:
         name:
-          # - git-remote-gosh-darwin-arm64
-          # - git-remote-gosh-darwin-amd64
+          - git-remote-gosh-darwin-arm64
+          - git-remote-gosh-darwin-amd64
           - git-remote-gosh-linux-arm64
           - git-remote-gosh-linux-amd64
 
