--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -23,7 +23,6 @@ env:
   CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
   CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
   CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
-  RUSTFLAGS: -C target-feature=+crt-static -C link-self-contained=yes
 
 jobs:
   build:
@@ -128,7 +127,9 @@ jobs:
             libc6-dev-amd64-cross
             gcc-x86-64-linux-gnu
         run: |
+          # Setup linux rustc flags
           echo "RUSTFLAGS=-C target-feature=+crt-static -C link-self-contained=yes" >> $GITHUB_ENV
+
           sudo apt-get update -y && sudo apt-get install -y \
             $APT \
             $APT_${{ startsWith(matrix.target, 'aarch64') && 'ARM64' || 'AMD64' }}
