--- a/.woodpecker/commit.yaml
+++ b/.woodpecker/commit.yaml
@@ -14,6 +14,7 @@ matrix:
     - bin: git_remote_gosh_v1_0_0
       dir: v1_x/git-remote-gosh
 
+
 steps:
   test:
     image: rust:latest
@@ -21,5 +22,4 @@ steps:
     commands:
       - apt update
       - apt install -yq protobuf-compiler
-      - cargo build
-      - cargo test
+      - cargo build -r
